--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -218,26 +218,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sewer/SewerBoat
-MRUItem1=/Game/Sewer/Lever
-MRUItem2=/Game/Player/ThirdPersonCharacter
-MRUItem3=/Game/Levels/NewSewer
-MRUItem4=/Game/Levels/Bubbleopolis
-MRUItem5=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
-MRUItem6=/Game/Geometry/Meshes/Material__5
-MRUItem7=/Game/Geometry/Meshes/SM_ToonGrass
-MRUItem8=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
-MRUItem9=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
-MRUItem10=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem11=/Game/BubbleGang/Girls/BubbleGirl_Ani
-MRUItem12=/Game/BubbleGang/Girls/BubbleGirl_Blend
-MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_BP
-MRUItem14=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem15=/Game/BubbleGang/Boys/BubbleBoy_BP
-MRUItem16=/Game/BubbleGang/Boys/BubbleBoy_Anim
-MRUItem17=/Game/BubbleGang/Boys/BubbleBoy_Blend
-MRUItem18=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
-MRUItem19=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
+MRUItem0=/Game/Sewer/SewerTrack
+MRUItem1=/Game/Sewer/SewerBoat
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Sewer/Lever
+MRUItem4=/Game/Player/ThirdPersonCharacter
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
+MRUItem7=/Game/Geometry/Meshes/Material__5
+MRUItem8=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem9=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
+MRUItem10=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
+MRUItem11=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem12=/Game/BubbleGang/Girls/BubbleGirl_Ani
+MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_Blend
+MRUItem14=/Game/BubbleGang/Girls/BubbleGirl_BP
+MRUItem15=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem16=/Game/BubbleGang/Boys/BubbleBoy_BP
+MRUItem17=/Game/BubbleGang/Boys/BubbleBoy_Anim
+MRUItem18=/Game/BubbleGang/Boys/BubbleBoy_Blend
+MRUItem19=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3492,7 +3492,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=1065.000 Y=452.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1530.000 Y=894.000
+WindowSize=X=1535.000 Y=899.000
 None=======
 InitiallyMaximized=True
 
@@ -5463,7 +5463,7 @@ Mush2__C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Render
 DialogueGetLine_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 Mush5_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-SewerBoat_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+SewerBoat_C=
 Lever_C=
 SewerTrack_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 SphereComponent=SphereComponent.Collision.Collision,
@@ -5501,7 +5501,7 @@ DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-NewSewer_C=
+NewSewer_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 BluePaintPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 LightPickupActor_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
