--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,6 @@ LastSize=(X=0,Y=0)
 MultipleInstancePositions=(X=320,Y=160)
 NewWindowWidth=1290
 NewWindowHeight=754
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bAllowArcballRotate=False
@@ -153,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -175,7 +174,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.187500
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -206,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/Castle
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,26 +218,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
-MRUItem2=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
-MRUItem3=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
-MRUItem4=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
-MRUItem5=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
-MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem7=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem8=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
-MRUItem9=/Game/Sewer/SewerTrack
-MRUItem10=/Game/Sewer/Lever
-MRUItem11=/Game/Sewer/SewerBoat
-MRUItem12=/Game/Levels/NewSewer
-MRUItem13=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
-MRUItem14=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1
-MRUItem15=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem16=/Game/SewerLadder/lambert1
-MRUItem17=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
-MRUItem18=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem19=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Levels/PersistentLevel
+MRUItem6=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
+MRUItem7=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
+MRUItem8=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
+MRUItem9=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
+MRUItem10=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
+MRUItem11=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem12=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem13=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
+MRUItem14=/Game/Sewer/SewerTrack
+MRUItem15=/Game/Sewer/Lever
+MRUItem16=/Game/Sewer/SewerBoat
+MRUItem17=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
+MRUItem18=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1
+MRUItem19=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2893,7 +2892,7 @@ Pawn="\"Object.Default.Destinations\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
-Info="\"Object.Lightmass.LightmassSettings\" "
+Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 None=======
 None=======
 None=======
@@ -3582,7 +3581,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=1065.000 Y=452.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1550.000 Y=914.000
+WindowSize=X=1555.000 Y=919.000
 None=======
 InitiallyMaximized=True
 
@@ -3601,7 +3600,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5170,22 +5169,22 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/ForestBackup
-MRUItem6=/Game/Levels/Sewer
-MRUItem7=/Game/Levels/testYellow
-MRUItem8=/Game/Levels/NewMap
-MRUItem9=/Game/Levels/testGreen
-MRUItem10=/Game/Levels/TechDemo
-MRUItem11=/Game/Levels/testMagenta
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Levels/PersistentLevel
+MRUItem6=/Game/Levels/ForestBackup
+MRUItem7=/Game/Levels/Sewer
+MRUItem8=/Game/Levels/testYellow
+MRUItem9=/Game/Levels/NewMap
+MRUItem10=/Game/Levels/testGreen
+MRUItem11=/Game/Levels/TechDemo
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5613,6 +5612,9 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/Castle/Castle_Level/Castle_Level_FULL_TEMP.Castle_Level_FULL_TEMP;
 RecentlyPlaced=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP.BubbleMan_BP;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/BubbleGang/Boys/WalkingBubbleMan_Anim_mixamo_com.WalkingBubbleMan_Anim_mixamo_com;
@@ -5630,9 +5632,6 @@ RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water.MM_Sewer_Wa
 RecentlyPlaced=/Game/SewerWall_Base_Mat.SewerWall_Base_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
-RecentlyPlaced=/Game/Geometry/Meshes/Pipes/PipeLong.PipeLong;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
