--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -216,28 +216,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem1=/Game/Player/ThirdPersonCharacter
-MRUItem2=/Game/Blueprints/Pickups/RedPickup_Actor
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Levels/Castle
-MRUItem5=/Game/Levels/Bubbleopolis
-MRUItem6=/Game/Levels/NewSewer
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Levels/Forest
-MRUItem9=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
-MRUItem10=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
-MRUItem11=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
-MRUItem12=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
-MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
-MRUItem14=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem15=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem16=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
-MRUItem17=/Game/Sewer/SewerTrack
-MRUItem18=/Game/Sewer/Lever
-MRUItem19=/Game/Sewer/SewerBoat
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Movies/CutsceneLvl2
+MRUItem2=/Game/Movies/CutsceneLvl1
+MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem4=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem5=/Game/Player/ThirdPersonCharacter
+MRUItem6=/Game/Blueprints/Pickups/RedPickup_Actor
+MRUItem7=/Game/Levels/Castle
+MRUItem8=/Game/Levels/Bubbleopolis
+MRUItem9=/Game/Levels/NewSewer
+MRUItem10=/Game/Levels/MainMenu
+MRUItem11=/Game/Levels/Forest
+MRUItem12=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
+MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
+MRUItem14=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
+MRUItem15=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
+MRUItem16=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
+MRUItem17=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem18=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem19=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2885,10 +2886,18 @@ Fall_Gnome_C.Optimization=True
 Fall_Gnome_C.MaterialParameters=True
 Fall_Gnome_C.HLOD=True
 Fall_Gnome_C.Mobile=True
+CutsceneLvl1_C.Tick=True
+CutsceneLvl1_C.Replication=True
+CutsceneLvl1_C.Actor=True
+CutsceneLvl1_C.Input=True
+CutsceneLvl2_C.Tick=True
+CutsceneLvl2_C.Replication=True
+CutsceneLvl2_C.Actor=True
+CutsceneLvl2_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -2992,7 +3001,7 @@ Mush2__C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collisi
 Mush4_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Mush5_C="\"Object.Actor.PivotOffset\" "
 Forest_C=
-LevelScriptActor="\"Object.TrackSwitched\" "
+LevelScriptActor=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -5175,20 +5184,22 @@ DistCurveEditor.TimeStamp=2021.02.15-00.29.15
 DistCurveEditor.LastCompileMethod=Unknown
 DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2021.02.09-23.59.37
+WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/Castle
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/NewSewer
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/Forest
-MRUItem6=/Game/Levels/ForestBackup
-MRUItem7=/Game/Levels/Sewer
-MRUItem8=/Game/Levels/testYellow
-MRUItem9=/Game/Levels/NewMap
-MRUItem10=/Game/Levels/testGreen
-MRUItem11=/Game/Levels/TechDemo
+MRUItem1=/Game/Movies/CutsceneLvl2
+MRUItem2=/Game/Movies/CutsceneLvl1
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Levels/Castle
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/Levels/NewSewer
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/ForestBackup
+MRUItem9=/Game/Levels/Sewer
+MRUItem10=/Game/Levels/testYellow
+MRUItem11=/Game/Levels/NewMap
 
 [MessageLog]
 LastLogListing=LightingResults
